[project]
name = "iloop"
version = "0.1.0"
description = "run stuff in tmux with shortcuts"
readme = "README.md"
authors = [
    { name = "Daniel Kuettel", email = "dkuettel@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
iloop = "iloop:app"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
reportUnusedCallResult=false
